Updated homepage to be responsive to iPhone viewport size (428px)

--- a/index.html
+++ b/index.html
@@ -46,22 +46,21 @@
     </nav>
 
     <div class="section">
-
-        <h2> 👋 Hi I am</h2>
-        <h1>Victoria Lee</h1>
-        <h3> an aspiring front-end Developer, based in Australia <i class="em em-flag-au" aria-role="presentation"
-                aria-label="Australia Flag"></i></h3>
-        <div class="navigation-links">
-            <a href="about.html#contact" class="contact-link">Contact me</a>
-            <a href="about.html" class="about-link">About me</a>
-        </div>
+            <h2 id="hi-sentence"> 👋 Hi I am</h2>
+            <h1 id="name">Victoria Lee</h1>
+            <h3 id="description"> an aspiring front-end Developer, based in Australia <i class="em em-flag-au" aria-role="presentation"
+                    aria-label="Australia Flag"></i></h3>
+            <div class="navigation-links">
+                <a href="about.html#contact" class="contact-link">Contact me</a>
+                <a href="about.html" class="about-link">About me</a>
+            </div>
 
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mt-5">
-                    <img src="images/yoga.png" class="img-fluid rounded" alt="yoga-screenshot" id="yoga-pic">
+                    <img src="images/yoga.png" class="img-fluid rounded" alt="yoga-image" id="yoga-pic">
                 </div>
-                <div class="col-md-6">
+                <div class="yoga-app col-md-6">
                     <h2 class="mt-5 mb-3 text-center" id="yoga-title">
                         Yoga app
                     </h2>
@@ -77,7 +76,7 @@
                 </div>
             </div>
 
-            <div class="row mt-5">
+            <div class="weather-app row mt-5">
                 <div class="col-md-6">
                     <h2 class="mt-5 mb-3 text-center" id="weather-title">
                         Weather app
@@ -101,7 +100,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="pink-app row">
                 <div class="col-md-6 mt-5">
                     <img src="images/pink-app.png" class="img-fluid rounded" alt="pink-screenshot" id="yoga-pic">
                 </div>
