--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <a href="index.html" class="homepage-link">Back to homepage</a>
     </div>
 
-    <h1>About me</h1>
+    <h1 id="about-sentence">About me</h1>
     <h3>an aspiring front-end developer from Gold Coast, Queensland</h3>
 
     <div class="about-paragraphs text-center">
@@ -80,7 +80,7 @@
         </div>
     </div>
 
-    <div id="contact" class="mt-5">
+    <div id="contact" class="mt-5 mb-5">
         <h2>
             📮 Contact me
         </h2>
