--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <img src="images/pink-app.png" class="img-fluid rounded" alt="pink-screenshot" id="yoga-pic">
                 </div>
                 <div class="col-md-6">
-                    <h2 class="mt-5 mb-3 text-center" id="yoga-title">
+                    <h2 class="mt-5 mb-3 text-center" id="pink-title">
                         Pink app
                     </h2>
                     <p>
