Updated CSS for website to be more SEO-friendly

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="description" content="This page showcases more of Victoria Lee's SheCodes projects.">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -50,14 +51,14 @@
         </div>
     </nav>
     <div class="mt-5 p-3">
-        <a href="index.html" class="homepage-link">Back to homepage</a>
+        <a href="index.html" class="homepage-link" title="Homepage">Back to homepage</a>
     </div>
 
     <h1 id="about-sentence">About me</h1>
     <h3>an aspiring front-end developer from Gold Coast, Queensland</h3>
 
     <div class="about-paragraphs text-center">
-        <p>
+        <p id="about-paragraph">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque
             adipisci,
             non
@@ -69,13 +70,13 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
-                <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" alt="yoga-pic">
+                <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" alt="yoga-demo-image" title="yoga-demo-screenshot">
             </div>
             <div class="col-sm-4">
-                <img src="images/weather-app.png" class="img-fluid p-2 shadow rounded" alt="yoga-pic">
+                <img src="images/weather-app.png" class="img-fluid p-2 shadow rounded" alt="weather-project-image" title="weather-project-screenshot">
             </div>
             <div class="col-sm-4">
-                <img src="images/pink-app.png" class="img-fluid p-2 shadow rounded" alt="yoga-pic">
+                <img src="images/pink-app.png" class="img-fluid p-2 shadow rounded" alt="pink-project-image" title="pink-project-screenshot">
             </div>
         </div>
     </div>
