--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="This is Victoria Lee's first coding portfolio.">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -16,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <title>Victoria Lee</title>
+    <title>Victoria Lee's SheCodes Portfolio</title>
     <link rel="stylesheet" href="src/style.css">
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 </head>
@@ -58,18 +59,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mt-5">
-                    <img src="images/yoga.png" class="img-fluid rounded" alt="yoga-image" id="yoga-pic">
+                    <img src="images/yoga.png" class="img-fluid rounded-lg" alt="yoga-demo-image" id="yoga-pic" title="yoga-demo-screenshot">
                 </div>
                 <div class="yoga-app col-md-6">
                     <h2 class="mt-5 mb-3 text-center" id="yoga-title">
                         Yoga app
                     </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-                        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-                        eos eveniet alias temporibus deserunt veritatis minima fugiat
-                        explicabo eum dolore.
-                    </p>
+                        <p id="yoga-p">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+                            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+                            eos eveniet alias temporibus deserunt veritatis minima fugiat
+                            explicabo eum dolore.
+                        </p>
                     <div class="mt-5 text-center">
                         <a href="#" class="primary-link">Launch Yoga App</a>
                     </div>
@@ -81,7 +82,7 @@
                     <h2 class="mt-5 mb-3 text-center" id="weather-title">
                         Weather app
                     </h2>
-                    <p>
+                    <p id="weather-p">
                         This was my second projet I coded utilising the skills I learnt in the SheCodes Plus workshop.
                         It
                         was a rather challenging project as I had to really get my head around Javascript. Still, I
@@ -96,19 +97,19 @@
                 </div>
 
                 <div class="col-md-6 mt-5">
-                    <img src="images/weather-app.png" class="img-fluid rounded" alt="weather-screenshot" id="yoga-pic">
+                    <img src="images/weather-app.png" class="img-fluid rounded-lg" alt="weather-project-image" id="yoga-pic" title="weather-project-screenshot">
                 </div>
             </div>
 
             <div class="pink-app row">
                 <div class="col-md-6 mt-5">
-                    <img src="images/pink-app.png" class="img-fluid rounded" alt="pink-screenshot" id="yoga-pic">
+                    <img src="images/pink-app.png" class="img-fluid rounded-lg" alt="pink-project-image" id="pink-pic" title="pink-project-screenshot">
                 </div>
                 <div class="col-md-6">
                     <h2 class="mt-5 mb-3 text-center" id="pink-title">
                         Pink app
                     </h2>
-                    <p>
+                    <p id="pink-p">
                         This was my first projet I coded utilising the skills I learnt in the SheCodes Basics workshop.
                         As I
                         am an avid lover of pink, I thought it would be fun to dedicate a page solely to this delightful
